Updated and  fixed few ui issues

--- a/projects/angular-filter-dropdown/package.json
+++ b/projects/angular-filter-dropdown/package.json
@@ -1,9 +1,32 @@
 {
-  "name": "angular-filter-dropdown",
-  "version": "0.0.1",
+  "name": "@haripalani/angular-filter-dropdown",
+  "version": "1.0.1",
+  "description": "A modern, responsive filter dropdown component for Angular 19+ with Material Design",
+  "keywords": [
+    "angular",
+    "filter",
+    "dropdown",
+    "material-design",
+    "component",
+    "ui",
+    "responsive",
+    "multi-select"
+  ],
+  "author": "Hariharan P harisami73@gmail.com",
+  "license": "MIT",
+  "homepage": "https://github.com/haripalani/angular-filter-dropdown-project#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/haripalani/angular-filter-dropdown-project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/haripalani/angular-filter-dropdown-project/issues"
+  },
   "peerDependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/core": "^19.2.0"
+    "@angular/common": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/material": "^19.0.0",
+    "@angular/cdk": "^19.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
