--- a/projects/angular-filter-dropdown/package.json
+++ b/projects/angular-filter-dropdown/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@haripalani/angular-filter-dropdown",
-  "version": "1.0.1",
+  "name": "hp-filter-dropdown",
+  "version": "1.0.2",
   "description": "A modern, responsive filter dropdown component for Angular 19+ with Material Design",
   "keywords": [
     "angular",
