--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "serve:ssr:angular-filter-dropdown-project": "node dist/angular-filter-dropdown-project/server/server.mjs"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.2.0",
